carousel overflow fix

--- a/upload/catalog/view/javascript/jquery/owl-carousel/owl.carousel.css
+++ b/upload/catalog/view/javascript/jquery/owl-carousel/owl.carousel.css
@@ -95,7 +95,8 @@
 	-webkit-box-shadow: 0 1px 4px rgba(0,0,0,.2); 
 	-moz-box-shadow: 0 1px 4px rgba(0,0,0,.2); 
 	-o-box-shadow: 0 1px 4px rgba(0,0,0,.2); 
-	box-shadow: 0 1px 4px rgba(0,0,0,.2); 
+	box-shadow: 0 1px 4px rgba(0,0,0,.2);
+	overflow: hidden;
 }
 .owl-carousel .owl-buttons div {
 	opacity: 0; 
